examples/misc/error/compilation/etc_large-bfcode.bfr
(* 出力コードサイズがOCamlで扱える整数の最大長を超えるサンプル
   エラーになるわけではない
   長さを数えるときにオーバーフローしないことを確認する
*)

let main = [
  $build { x }
  + x 4611686018427387903
  + x 4611686018427387903
  + x 2
]